--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{ include = "api" }]
 [tool.poetry.dependencies]
 python = "^3.11"
 pillow = "^10.2.0"
+flake8 = "^7.0.0"
 
 
 [build-system]
